add accounts, customers, editCustomer, and transactions html files

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Course Manager</title>
+    <title>Tipton Bank</title>
 </head>
 <body>
 <div class="container">
@@ -19,13 +19,13 @@
     </div>
     <div class="row m-4 border border-dark">
         <div class="col text-center m-3">
-            <a href="teachers" class="btn btn-outline-primary btn-lg">Account Overview</a>
+            <a href="customers.html" class="btn btn-outline-primary btn-lg">Customer Information</a>
         </div>
         <div class="col text-center m-3">
-            <a href="students" class="btn btn-outline-primary btn-lg">Checking</a>
+            <a href="transactions.html" class="btn btn-outline-primary btn-lg">Transaction History</a>
         </div>
         <div class="col text-center m-3">
-            <a href="courses" class="btn btn-outline-primary btn-lg">Savings</a>
+            <a href="accounts.html" class="btn btn-outline-primary btn-lg">Account Overview</a>
         </div>
     </div>
 </div>
@@ -35,4 +35,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
-</html>
+</html>;
