--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,35 +4,68 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
     <title>Tipton Bank</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="css/bootstrap4-business-tycoon.min.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet">
+
+
 </head>
 <body>
-<div class="container">
-    <div class="row m-4">
-        <div class="col text-center border border-dark">
-            <h1>Tipton Bank of Sheldon</h1>
-        </div>
+
+<div class="bg-dark text-white navbar-dark">
+    <div class="container">
+        <nav class="navbar px-0 navbar-expand-lg navbar-dark">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a href="customers.html" class="pl-md-0 p-3 text-white">Customer Information</a>
+                    <a href="transactions.html" class="p-3 text-decoration-none text-white">Transaction History</a>
+                    <a href="accounts.html" class="p-3 text-decoration-none text-white">Account Overview</a>
+                </div>
+            </div>
+        </nav>
     </div>
-    <div class="row m-4 border border-dark">
-        <div class="col text-center m-3">
-            <a href="customers.html" class="btn btn-outline-primary btn-lg">Customer Information</a>
-        </div>
-        <div class="col text-center m-3">
-            <a href="transactions.html" class="btn btn-outline-primary btn-lg">Transaction History</a>
-        </div>
-        <div class="col text-center m-3">
-            <a href="accounts.html" class="btn btn-outline-primary btn-lg">Account Overview</a>
+</div>
+<div class="jumbotron bg-dark text-white mb-0">
+    <div class="container">
+        <h1 class="display-3 text-light">Tipton Bank of Sheldon</h1>
+        <div class="lead mb-3">Find the right solution for your banking needs.</div>
+        <div class="mt-4">
+            <a href="#!"
+               class="btn btn-primary btn-lg my-2 mr-2">
+                <span>Start Here</span>
+            </a>
+
+            <a href="#!"
+               class="btn btn-outline-light btn-hover-text-light btn-lg my-2">
+                <span>Schedule an Appointment</span>
+            </a>
         </div>
     </div>
 </div>
+
+
+<div class="container py-5">
+    <h1>Thanks</h1>
+
+    <p>Thank you for choosing Tipton Bank of Sheldon, we appreciate your business<br>
+
+
+
+</div>
+
+
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
-</html>;
+</html>
