--- a/src/main/resources/templates/transactions.html
+++ b/src/main/resources/templates/transactions.html
@@ -1,10 +1,127 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <title>Tipton Bank</title>
 </head>
 <body>
+<div class="container">
+    <div class="row m-4">
+        <div class="col text-center border border-dark">
+            <h1>Account Transactions</h1>
+        </div>
+    </div>
+    <div class="row m-4 border border-dark">
+        <div class="col text-center m-3">
+            <a href="index.html" class="btn btn-outline-primary btn-lg">Home</a>
+        </div>
+        <div class="col text-center m-3">
+            <a href="customers.html" class="btn btn-outline-primary btn-lg">Customer Information</a>
+        </div>
+        <div class="col text-center m-3">
+            <a href="accounts.html" class="btn btn-outline-primary btn-lg">Account Overview</a>
+        </div>
+    </div>
+</div>
+<div class="row m-4 border border-dark">
+    <div class="col-3 text-center m-3">
+        <span class="h3">Add Transaction</span>
+    </div>
+    <div class="col-7 text-center m-3">
+        <form action="addTransaction" method="POST">
+            <div class="form-group row">
+                <label for="trans_type" class="col-3 col-form-label">
+                   Type</label>
+                <div class="col-9">
+                    <input type="text" name="trans_type"
+                           id="trans_type" class="form-control"/>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="trans_date" class="col-3 col-form-label">
+                    Date</label>
+                <div class="col-9">
+                    <input type="text" name="trans_date"
+                           id="trans_date" class="form-control"/>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="amount" class="col-3 col-form-label">
+                    Amount</label>
+                <div class="col-9">
+                    <input type="text" name="amount"
+                           id="amount" class="form-control"/>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="total" class="col-3 col-form-label">
+                    Total</label>
+                <div class="col-9">
+                    <input type="text" name="total"
+                           id="total" class="form-control"/>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="pending_flag" class="col-3 col-form-label">
+                    Status</label>
+                <div class="col-9">
+                    <input type="text" name="pending_flag"
+                           id="pending_flag" class="form-control"/>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Add Transaction</button>
+        </form>
+    </div>
+</div>
+<div class="row m-4 border border-dark">
+    <div class="col text-center m-3">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Type</th>
+                <th>Date</th>
+                <th>Amount</th>
+                <th>Total</th>
+                <th>Status</th>
+                <th>Edit</th>
+                <th>Delete</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="transaction : ${transactions}">
+                <td th:text="${transaction.trans_id}">Teacher ID</td>
+                <td th:text="${transaction.trans_type}">Transaction Type</td>
+                <td th:text="${transaction.trans_date}">Transaction Date</td>
+                <td th:text="${transaction.amount}">Transaction Amount</td>
+                <td th:text="${transaction.total}">Transaction Total</td>
+                <td th:text="${transaction.pending_flag}">Transaction Status</td>
+                <td>Edit</td>
+                <td>Delete</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 </html>
